2007-03-09  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* AUTHORS
	* NEWS.pixbuf
	* src/ChangeLog
	* src/README.pixbuf
	* src/README.server: clean up and remove obsolete documentation
	* HACKING: add documentation about the internals

2007-03-08  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* README: replace with more detailed and relevant information

2007-02-20  Xan Lopez  <xan.lopez@nokia.com>

	* sapwood-draw.c (draw_option, draw_check):
	Add special casing for GtkCheckButton and GtkRadioButton to use
	the correct graphics in the theme when the widgets have focus.

2007-02-06  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.91.2 ===

2007-02-06  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_simple_image, get_window_for_shape): Check
	the paintable area size and apply the shape mask only when painting
	the whole window to avoid another case of infinite expose loop.

2007-01-31  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_expander): Added to handle painting
	GtkExpander and treeview row expanders. Reuses arrow theming rules for
	simplicity.

2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.91.1 ===

2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* demos/treeview.gtkrc: Simplify treeview theming example using
	wildcards

2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (match_theme_image): Add simple pattern matching
	for the 'detail' to simplify treeview theming. Only leading wildcard
	is supported. In gtkrc 'detail = "*_start"' will match all details
	ending with "_start" such as "cell_even_start", "cell_odd_start",
	"cell_even_ruled_start", etc.

2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* demos/Makefile.am
	* demos/treeview.c
	* demos/treeview.gtkrc
	* demos/images/treeview-*.png: Example for treeview active / passive
	focus theming
